Change flex direction from row to column in floating-content-style.component.scss to fix layout alignment

--- a/angular/components/elements/floating-content/floating-content-style.component.scss
+++ b/angular/components/elements/floating-content/floating-content-style.component.scss
@@ -5,7 +5,7 @@
 @import "../../../styles/global-placeholders";
 
 floating-content {
-    @include flex(center, center, row);
+    @include flex(center, center, column);
     animation: float 16s ease-in-out infinite;
 
 
